--- a/md/2012-En.md
+++ b/md/2012-En.md
@@ -94,7 +94,7 @@ person in their lives.
 
 Part A
 
-Directions:
+> Directions:
 
    Read the following four texts. Answer the questions after each text by choosing A, B, C
 
@@ -532,7 +532,7 @@ tend to _____.
 
 Part B
 
-Directions:
+> Directions:
 
    Read the following text and answer the questions by finding information from the right
 
@@ -678,7 +678,7 @@ their factories to make.
 
  Part A
 
- 47. Directions:
+ 47. > Directions:
 
     Suppose you have found something wrong with the electronic dictionary that you bought
 
@@ -696,7 +696,7 @@ their factories to make.
 
  Part B
 
- 48. Directions:
+ 48. > Directions:
 
     Write an essay based on the following table. In your writing, you should
 
