--- a/md/2016-En.md
+++ b/md/2016-En.md
@@ -2,7 +2,7 @@
 
                    Section I   Use  of English
 
-Directions:
+> Directions:
 
    Read the following text, Choose the best word(s) for each numbered blank and mark A，
 
@@ -108,7 +108,7 @@ more than the average,” said one researcher.
 
 Part A
 
-Directions:
+> Directions:
 
    Read the following four texts. Answer the questions below each text by choosing A， B，
 
@@ -518,7 +518,7 @@ didn’t have college degrees,” Schneider said, “I don’t think people are 
 
 Part B
 
-Directions:
+> Directions:
 
    Read  the following text and answer the questions by choosing the most suitable
 
@@ -628,7 +628,7 @@ happiness is not a goal but a natural byproduct of the way they live.
 
                    Section  III  Translation
 
-46. Directions:
+46. > Directions:
 
    Translate the following text into Chinese. Write your translation on the ANSWER
 
