--- a/md/2018-En.md
+++ b/md/2018-En.md
@@ -2,7 +2,7 @@
 
                     Section I Use  of English
 
-Directions:
+> Directions:
 
   Read the following text. Choose the best word （s） for each numbered blank and mark A,
 
@@ -100,7 +100,7 @@ other words, don't read online comments".
 
    Part A
 
-   Directions:
+   > Directions:
 
       Read the following four texts. Answer the questions below each text by choosing A,
 
@@ -552,7 +552,7 @@ focus and unfocus circuits in their brain," says Pillay.
 
 Part B
 
-  Directions:
+  > Directions:
 
     Read the following text and answer the questions by choosing the most suitable
 
@@ -672,7 +672,7 @@ person is a really good book to read, or to have a conversation with!
 
 12  
 
-46. Directions:
+46. > Directions:
 
    Translate the following text into Chinese. Write your translation neatly on the
 
@@ -702,7 +702,7 @@ opens up new avenues of knowledge," Gates says.
 
 Part A
 
-46. Directions:
+46. > Directions:
 
    Suppose you have to cancel your travel plan and will not be able to visit professor Smith,
 
@@ -720,7 +720,7 @@ write him an email to
 
 Part  B
 
-47. Directions:
+47. > Directions:
 
    Write an essay based on the chart below. In your writing , you should
 
