--- a/md/2019-En.md
+++ b/md/2019-En.md
@@ -2,7 +2,7 @@
 
                  SectionⅠ    Use   of   English
 
-Directions:
+> Directions:
 
    Read the following text. Choose the best word(s) for each numbered blank and mark A,
 
@@ -102,7 +102,7 @@ fit and your overall energy level.
 
 Part A
 
-Directions:
+> Directions:
 
    Read the following four texts. Answer the questions after each text by choosing A, B, C
 
@@ -652,7 +652,7 @@ D. are far from rational
 
 Part B
 
-Directions:
+> Directions:
 
    You are going to read a list of headings and a text, choose the most suitable heading
 
@@ -788,7 +788,7 @@ ideas of their children, despite the current housing crunch.
 
                    Section  III  Translation
 
-46. Directions:
+46. > Directions:
 
    Translate the following text into Chinese. Write your translation neatly on the
 
@@ -818,7 +818,7 @@ literature field was no exception.
 
 Part A
 
-47. Directions:
+47. > Directions:
 
    Suppose Professor Smith ask you to plan a debate on the theme of city traffic.Write him a
 
@@ -834,7 +834,7 @@ Do not write your address. (10 points)
 
 Part B
 
-48. Directions:
+48. > Directions:
 
    Write an essay based on the following chart.In your writing, you should
 
